--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <title>FastHosts</title>
+    <title>CloudHosts</title>
   </head>
   <body>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar logo" href="#">fasthosts</a>
+        <a class="navbar logo" href="#">CloudHosts</a>
         <div class="collapse navbar-collapse navTextDiv">
           <span class="navbar-text contactSales">
             Sales
@@ -36,8 +36,8 @@
           </div>
           <div class="col-sm middle-col">
             <form class="create-account-form shadow p-3 mb-5 bg-white rounded" action="" @submit="checkForm">
-                <div class="form-header1">Create your Fasthosts account</div>
-                <div class="form-header2">Already have a Fasthosts account? <a class="login-in-link" href="#">Log In</a></div>
+                <div class="form-header1">Create your CloudHosts account</div>
+                <div class="form-header2">Already have a CloudHosts account? <a class="login-in-link" href="#">Log In</a></div>
 
                 <br>
 
@@ -87,17 +87,17 @@
                 <br>
 
                 <div class="form-footer">
-                    <span>By creating your Fasthosts account, you agree to the </span>
+                    <span>By creating your CloudHosts account, you agree to the </span>
                     
                     <br>
 
-                    <span style="padding-left: 12px;"><a class="t&c" href="#">Fasthosts Term & Conditions </a>and <a class="t&c" href="#">privacy notice.</a></span>
+                    <span style="padding-left: 12px;"><a class="t&c" href="#">CloudHosts Term & Conditions </a>and <a class="t&c" href="#">privacy notice.</a></span>
                 </div>
 
               </form>
 
               <div class="linkHome">
-                <a href="#">Back to fasthosts.co.uk</a>
+                <a href="#">Back to cloudhosts.co.uk</a>
               </div>
           </div>
 
